Refactor: Building script was polished

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "echo",
+            "label": "Compile",
             "type": "shell",
             "command": "./test.bat",
             "args": [
