--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
     "tasks": [
         {
             "label": "Compile",
-            "type": "shell",
+            "type": "process",
             "command": "./test.bat",
             "args": [
                 "${fileBasename}"
